Changed About Us

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <div class="probootstrap-flex-block">
                 <div class="probootstrap-text probootstrap-animate">
                   <h3>About Us</h3>
-                  <p>RobôCIn is a research group of the Computer Center, which seeks solutions and intelligent solutions in the area of robotics. The group was created in 2015 and has 12 members and is coordinated by Professor Edna Barros and Professor Hansenclever Bassani.</p>
+                  <p>RobôCIn is a research group of the Infomatics Center at UFPE, which resolve problems using robotics. The group was created in 2015 by 12 students and the professors Edna Barros and Hansenclever Bassani.Today we count with 19 students and 2 the professors to coordinate the team to reach innovative solutions using A.I., computer vision, mechanics and electronics combined in robots.</p>
                   <p><a href="#" class="btn btn-primary">Learn More</a></p>
                 </div>
                 <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/video.jpg)">
