--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
               <div class="row">
                 <div class="col-md-8 col-md-offset-2">
                   <div class="probootstrap-slider-text text-center">
-                    <h1 class="probootstrap-heading probootstrap-animate"> Building the Future with Robotics</h1>
+                    <h1 class="probootstrap-heading probootstrap-animate">Fulfill your Potential</h1>
                   </div>
                 </div>
               </div>
