--- a/contact.html
+++ b/contact.html
@@ -154,13 +154,13 @@
       </section>
 
 
-      <footer class="probootstrap-footer probootstrap-bg">
+   <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
               <div class="probootstrap-footer-widget">
                 <h3>About RobôCIn</h3>
-                <p>RobôCIn is a research group of the Computer Center, which seeks solutions and intelligent solutions in the area of robotics.</p>
+                <p>RobôCIn is a research group of the CIn - UFPE , which aims to resolve problems and create innovative solutions at the robotics world.</p>
                 <h3>Social</h3>
                 <ul class="probootstrap-footer-social">
                   <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
