--- a/team.html
+++ b/team.html
@@ -514,70 +514,70 @@
       </section>
 
 
-            <footer class="probootstrap-footer probootstrap-bg">
-              <div class="container">
-                <div class="row">
-                  <div class="col-md-4">
-                    <div class="probootstrap-footer-widget">
-                      <h3>About RobôCIn</h3>
-                      <p>RobôCIn is a research group of the Computer Center, which seeks solutions and intelligent solutions in the area of robotics.</p>
-                      <h3>Social</h3>
-                      <ul class="probootstrap-footer-social">
-                        <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                        <li><a href="#"><i class="icon-github"></i></a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-3 col-md-push-1">
-                    <div class="probootstrap-footer-widget">
-                      <h3>Links</h3>
-                      <ul>
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li><a href="#" >Categories</a></li>
-                        <li><a href="events.html">Publications</a></li>
-                        <li><a href="team.html">Team</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                      </ul>
-                    </div>
-                  </div>
-                  <div class="col-md-4">
-                    <div class="probootstrap-footer-widget">
-                      <h3>Contact Info</h3>
-                      <ul class="probootstrap-contact-info">
-                        <li><i class="icon-location2"></i> <span>Av. Jorn. Aníbal Fernandes, s/n-Cidade Universitária, Recife-PE</span></li>
-                        <li><i class="icon-mail"></i><span>robocin@cin.ufpe.br</span></li>
-                        <li><i class="icon-phone2"></i><span>+55 81 2126-8430</span></li>
-                      </ul>
-                    </div>
-                  </div>
-
-                </div>
-                <!-- END row -->
-
+ <footer class="probootstrap-footer probootstrap-bg">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="probootstrap-footer-widget">
+                <h3>About RobôCIn</h3>
+                <p>RobôCIn is a research group of the CIn - UFPE , which aims to resolve problems and create innovative solutions at the robotics world.</p>
+                <h3>Social</h3>
+                <ul class="probootstrap-footer-social">
+                  <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
+                  <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
+                  <li><a href="#"><i class="icon-github"></i></a></li>
+                </ul>
               </div>
-
-              <div class="probootstrap-copyright">
-                <div class="container">
-                  <div class="row">
-                    <div class="col-md-8 text-left">
-                      <p>&copy; 2017 <a href="cin.ufpe.br/~robocin">RobôCIn </a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
-                    </div>
-                    <div class="col-md-4 probootstrap-back-to-top">
-                      <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
-                    </div>
-                  </div>
-                </div>
+            </div>
+            <div class="col-md-3 col-md-push-1">
+              <div class="probootstrap-footer-widget">
+                <h3>Links</h3>
+                <ul>
+                  <li class="active"><a href="index.html">Home</a></li>
+                  <li><a href="#" >Categories</a></li>
+                  <li><a href="events.html">Publications</a></li>
+                  <li><a href="team.html">Team</a></li>
+                  <li><a href="contact.html">Contact</a></li>
+                </ul>
               </div>
-            </footer>
+            </div>
+            <div class="col-md-4">
+              <div class="probootstrap-footer-widget">
+                <h3>Contact Info</h3>
+                <ul class="probootstrap-contact-info">
+                  <li><i class="icon-location2"></i> <span>Av. Jorn. Aníbal Fernandes, s/n-Cidade Universitária, Recife-PE</span></li>
+                  <li><i class="icon-mail"></i><span>robocin@cin.ufpe.br</span></li>
+                  <li><i class="icon-phone2"></i><span>+55 81 2126-8430</span></li>
+                </ul>
+              </div>
+            </div>
 
           </div>
-          <!-- END wrapper -->
+          <!-- END row -->
+
+        </div>
+
+        <div class="probootstrap-copyright">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 text-left">
+                <p>&copy; 2017 <a href="cin.ufpe.br/~robocin">RobôCIn </a>. All Rights Reserved. Designed &amp; Developed with <i class="icon icon-heart"></i> by <a href="https://probootstrap.com/">ProBootstrap.com</a></p>
+              </div>
+              <div class="col-md-4 probootstrap-back-to-top">
+                <p><a href="#" class="js-backtotop">Back to top <i class="icon-arrow-long-up"></i></a></p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    </div>
+    <!-- END wrapper -->
 
 
-          <script src="js/scripts.min.js"></script>
-          <script src="js/main.min.js"></script>
-          <script src="js/custom.js"></script>
+    <script src="js/scripts.min.js"></script>
+    <script src="js/main.min.js"></script>
+    <script src="js/custom.js"></script>
 
-        </body>
-      </html>
+  </body>
+</html>
