--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   License: Released for free under the Creative Commons Attribution 3.0 license (probootstrap.com/license)
 -->
 <html lang="en">
+<!-- head | begin -->
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -26,6 +27,9 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
+<!-- head | end -->
+	
+<!-- body | begin -->
   <body>
 <!--
     <div class="probootstrap-search" id="probootstrap-search">
@@ -223,9 +227,9 @@
                 </div>
                 <div class="probootstrap-text">
                   <span class="probootstrap-counter">
-                    <span class="js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50">1</span> Years
+                    <span class="js-counter" data-from="0" data-to="2" data-speed="1000" data-refresh-interval="50">1</span> 
                   </span>
-                  <span class="probootstrap-counter-label">Source</span>
+                  <span class="probootstrap-counter-label">Years</span>
                 </div>
               </div>
             </div>
@@ -307,7 +311,7 @@
             <div class="col-md-4">
               <div class="probootstrap-footer-widget">
                 <h3>About RobôCIn</h3>
-                <p>RobôCIn is a research group of the Computer Center, which seeks solutions and intelligent solutions in the area of robotics.</p>
+                <p>RobôCIn is a research group of the CIn - UFPE , which aims to resolve problems and create innovative solutions at the robotics world.</p>
                 <h3>Social</h3>
                 <ul class="probootstrap-footer-social">
                   <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook"></i></a></li>
