--- a/vsss.html
+++ b/vsss.html
@@ -114,41 +114,20 @@
         </div>
       </section>
 
-      <section class="probootstrap-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="probootstrap-flex-block">
-                <div class="probootstrap-text probootstrap-animate">
-                  <div class="text-uppercase probootstrap-uppercase">History</div>
-                  <h3>Take A Look at How We Begin</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
-                  <p><a href="#" class="btn btn-primary">Learn More</a></p>
-                </div>
-                <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_4.jpg)">
-                  <a href="https://vimeo.com/45830194" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
 
 
 
       <section class="probootstrap-section">
         <div class="container">
 
-          <div class="col-md-6">
+          <div class="col-md-7">
             <p>
-              <img src="img/slider_1.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+              <img src="img/vsss_robot.png" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
             </p>
           </div>
-          <div class="col-md-6 col-md-push-1">
-            <h2>We are NYC based School focused on excellence.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
-            <p>Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
+          <div class="col-md-5">
+            <h2>A little about VSSS</h2>
+            <h6>Very Small Size Soccer (VSSS) is a competition that requires development in the RobôCIn’s main areas, computer vision to detect informations about the game situation; artificial intelligence to plan all robots movements, so the team can score goals, and defend ourselves from opponents; and robotics that involve electronics and mechanics to make agents that needs to move perfectly on the field. Together with computer vision and A.I. makes our system of robots that play soccer.</h6><h6>VSS also demands small players (robots), so teams needs to build a consistent robotics project with limited space. Another important feature about the systems is the real time response, so RobôCIn develop a efficient computer vision and A.I., otherwise the robots won't react properly on the game.</h6>
           </div>
 
 
@@ -156,68 +135,9 @@
       </section>
 
 
-      <section class="probootstrap-section">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-6 col-md-offset-3 text-center section-heading probootstrap-animate">
-              <h2>Why Choose Enlight School</h2>
-              <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-            </div>
-          </div>
-          <div class="row">
-            <div class="col-md-6">
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Consectetur Adipisicing</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Aliquid Dolorum Saepe</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Eveniet Tempora Anisi</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Laboriosam Quod Dignissimos</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Asperiores Maxime Modi</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-
-              <div class="service left-icon probootstrap-animate">
-                <div class="icon"><i class="icon-checkmark"></i></div>
-                <div class="text">
-                  <h3>Libero Maxime Molestiae</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto provident qui tempore natus quos quibusdam soluta at.</p>
-                </div>
-              </div>
-
-            </div>
-          </div>
+      
           <!-- END row -->
         </div>
-      </section>
 
   <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
