--- a/vsss.html
+++ b/vsss.html
@@ -117,15 +117,15 @@
 
 
 
-      <section class="probootstrap-section">
+      <section class="probootstrap-section probootstrap-flex-block">
         <div class="container">
 
-          <div class="col-md-7">
+          <div class="col-md-7 ">
             <p>
               <img src="img/vsss_robot.png" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
             </p>
           </div>
-          <div class="col-md-5">
+          <div class="col-md-5" style="background-color: white;"> 
             <h2>A little about VSSS</h2>
             <h6>Very Small Size Soccer (VSSS) is a competition that requires development in the RobôCIn’s main areas, computer vision to detect informations about the game situation; artificial intelligence to plan all robots movements, so the team can score goals, and defend ourselves from opponents; and robotics that involve electronics and mechanics to make agents that needs to move perfectly on the field. Together with computer vision and A.I. makes our system of robots that play soccer.</h6><h6>VSS also demands small players (robots), so teams needs to build a consistent robotics project with limited space. Another important feature about the systems is the real time response, so RobôCIn develop a efficient computer vision and A.I., otherwise the robots won't react properly on the game.</h6>
           </div>
