--- a/team.html
+++ b/team.html
@@ -124,7 +124,7 @@
             <div class="col-md-4 col-sm-6 ">
               <div class="probootstrap-teacher text-center probootstrap-animate ">
                 <figure class="media">
-                  <img src="img/edna.jpeg" alt="" class="img-responsive">
+                  <img src="img/edna.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
                   <h3>Edna Barros</h3>
