--- a/vsss.html
+++ b/vsss.html
@@ -117,8 +117,8 @@
 
 
 
-      <section class="probootstrap-section probootstrap-flex-block">
-        <div class="container">
+      <section class="probootstrap-section ">
+        <div class="container probootstrap-flex-block">
 
           <div class="col-md-7 ">
             <p>
