--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@
               <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="team.html">Workshop</a></li>
             </ul>
           </div>
         </div>
