Update in workshop page

--- a/team.html
+++ b/team.html
@@ -26,83 +26,84 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
-
+     <body>
+<!--
     <div class="probootstrap-search" id="probootstrap-search">
       <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross"></i></a>
       <form action="#">
         <input type="search" name="s" id="search" placeholder="Search a keyword and hit enter...">
       </form>
     </div>
-
+  -->
     <div class="probootstrap-page-wrapper">
       <!-- Fixed navbar -->
 
-            <div class="probootstrap-header-top">
-              <div class="container">
-                <div class="row">
-                  <div class="col-lg-9 col-md-9 col-sm-9 probootstrap-top-quick-contact-info">
-                  </div>
-                  <div class="col-lg-3 col-md-3 col-sm-3 probootstrap-top-social">
-                    <ul>
-                      <!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
-                      <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
-                      <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
-                      <li><a href="#"><i class="icon-github"></i></a></li>
-                      <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home"><i class="icon-user"></i></a></li>
-                      <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
-                    </ul>
-                  </div>
-                </div>
-              </div>
+      <div class="probootstrap-header-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-9 col-md-9 col-sm-9 probootstrap-top-quick-contact-info">
             </div>
-            <nav class="navbar navbar-default probootstrap-navbar">
-              <div class="container">
-                <div class="navbar-header">
-                  <div class="btn-more js-btn-more visible-xs">
-                    <a href="#"><i class="icon-dots-three-vertical "></i></a>
-                  </div>
-                  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="index.html" title="ProBootstrap:Enlight">RobôCIn</a>
-                </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 probootstrap-top-social">
+              <ul>
+                <!--<li><a href="#"><i class="icon-twitter"></i></a></li>-->
+                <li><a href="https://www.facebook.com/robocin/"><i class="icon-facebook2"></i></a></li>
+                <li><a href="https://www.instagram.com/robocinufpe/"><i class="icon-instagram2"></i></a></li>
+                <li><a href="#"><i class="icon-github"></i></a></li>
+                <li><a href="https://sites.google.com/a/cin.ufpe.br/wiki-robocin/home"><i class="icon-user"></i></a></li>
+                <!--<li><a href="#" class="probootstrap-search-icon js-probootstrap-search"><i class="icon-search"></i></a></li>-->
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+      <nav class="navbar navbar-default probootstrap-navbar">
+        <div class="container">
+          <div class="navbar-header">
+            <div class="btn-more js-btn-more visible-xs">
+              <a href="#"><i class="icon-dots-three-vertical "></i></a>
+            </div>
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse" aria-expanded="false" aria-controls="navbar">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="index.html" title="ProBootstrap:Enlight">RobôCIn</a>
+          </div>
 
-                <div id="navbar-collapse" class="navbar-collapse collapse">
-                  <ul class="nav navbar-nav navbar-right">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li class="dropdown">
-                      <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
-                      <ul class="dropdown-menu">
-                        <li><a href="vsss.html">Very Small Size</a></li>
-                        <!--
-                        <li><a href="courses.html">Courses</a></li>
-                        <li><a href="course-single.html">Course Single</a></li>
-                        <li><a href="gallery.html">Gallery</a></li>
+          <div id="navbar-collapse" class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+              <li class="active"><a href="index.html">Home</a></li>
+              <li class="dropdown">
+                <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
+                <ul class="dropdown-menu">
+                  <li><a href="vsss.html">Very Small Size</a></li>
+                  <!--
+                  <li><a href="courses.html">Courses</a></li>
+                  <li><a href="course-single.html">Course Single</a></li>
+                  <li><a href="gallery.html">Gallery</a></li>
 
-                        <li class="dropdown-submenu dropdown">
-                          <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
-                          <ul class="dropdown-menu">
-                            <li><a href="#">Second Level Menu</a></li>
-                            <li><a href="#">Second Level Menu</a></li>
-                            <li><a href="#">Second Level Menu</a></li>
-                            <li><a href="#">Second Level Menu</a></li>
-                          </ul>
-                        </li>
-                        <li><a href="news.html">News</a></li>
-                          -->
-                      </ul>
-                    </li>
-                    <li><a href="publications.html">Publications</a></li>
-                    <li><a href="team.html">Team</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                  </ul>
-                </div>
-              </div>
-            </nav>
+                  <li class="dropdown-submenu dropdown">
+                    <a href="#" data-toggle="dropdown" class="dropdown-toggle"><span>Sub Menu</span></a>
+                    <ul class="dropdown-menu">
+                      <li><a href="#">Second Level Menu</a></li>
+                      <li><a href="#">Second Level Menu</a></li>
+                      <li><a href="#">Second Level Menu</a></li>
+                      <li><a href="#">Second Level Menu</a></li>
+                    </ul>
+                  </li>
+                  <li><a href="news.html">News</a></li>
+                    -->
+                </ul>
+              </li>
+              <li><a href="publications.html">Publications</a></li>
+              <li><a href="team.html">Team</a></li>
+              <li><a href="contact.html">Contact</a></li>
+              <li><a href="workshop.html">Workshop</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
 
       <section class="probootstrap-section probootstrap-section-colored"  >
         <div class="container">
