--- a/workshop.html
+++ b/workshop.html
@@ -111,26 +111,31 @@
         <div class="container">
           <div class="row">
             <div class="col-md-12 text-left section-heading probootstrap-animate">
-              <h1>Our Courses</h1>
+              <h1>Workshops</h1>
             </div>
           </div>
         </div>
       </section>
 
-      <section class="probootstrap-section">
+       <section class="probootstrap-section">
         <div class="container">
           <div class="row">
-            <div class="col-md-12">
+            <div style="width:350%;">
               <div class="probootstrap-flex-block">
                 <div class="probootstrap-text probootstrap-animate">
-                  <div class="text-uppercase probootstrap-uppercase">Featured Course</div>
-                  <h3>Chemical Engineering</h3>
-                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis explicabo veniam labore ratione illo vero voluptate a deserunt incidunt odio aliquam commodi blanditiis voluptas error non rerum temporibus optio accusantium!</p>
-                  <p><a href="#" class="btn btn-primary">Enroll now</a> <span class="enrolled-count">2,928 students enrolled</span></p>
-                </div>
-                <div class="probootstrap-image probootstrap-animate" style="background-image: url(img/slider_3.jpg)">
-                  <a href="https://vimeo.com/45830194" class="btn-video popup-vimeo"><i class="icon-play3"></i></a>
-                </div>
+                    <div style="width: 30%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">Strategy</h3>
+                      <img src="img/stg.png" alt="" width="80%" style=" display: block;margin-left: auto;margin-right: auto;" >
+                    </div>
+                    <div style="width: 30%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">Robotic</h3>
+                      <img src="img/robotic.png" alt="" width="80%"  style=" display: block;margin-left: auto;margin-right: auto;">
+                    </div>
+                    <div style="width: 30%;float: left;padding-right:5%;padding-left:5%">
+                      <h3 style="text-align: center;">Vision</h3>
+                      <img src="img/vision.png" alt="" width="80%"  style=" display: block;margin-left: auto;margin-right: auto;">
+                    </div>
+                  </div>
               </div>
             </div>
           </div>
