--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+    <body>
 <!--
     <div class="probootstrap-search" id="probootstrap-search">
       <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross"></i></a>
@@ -99,6 +99,7 @@
               <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="workshop.html">Workshop</a></li>
             </ul>
           </div>
         </div>
