--- a/publications.html
+++ b/publications.html
@@ -26,7 +26,7 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+   <body>
 <!--
     <div class="probootstrap-search" id="probootstrap-search">
       <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross"></i></a>
@@ -73,7 +73,7 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="index.html">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
@@ -96,9 +96,10 @@
                     -->
                 </ul>
               </li>
-              <li><a href="publications.html" class="active">Publications</a></li>
+              <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="workshop.html">Workshop</a></li>
             </ul>
           </div>
         </div>
