--- a/vsss.html
+++ b/vsss.html
@@ -26,7 +26,7 @@
       <script src="js/vendor/respond.min.js"></script>
     <![endif]-->
   </head>
-  <body>
+    <body>
 <!--
     <div class="probootstrap-search" id="probootstrap-search">
       <a href="#" class="probootstrap-close js-probootstrap-close"><i class="icon-cross"></i></a>
@@ -73,11 +73,11 @@
 
           <div id="navbar-collapse" class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-              <li ><a href="index.html">Home</a></li>
+              <li class="active"><a href="index.html">Home</a></li>
               <li class="dropdown">
                 <a href="#" data-toggle="dropdown" class="dropdown-toggle">Categories</a>
                 <ul class="dropdown-menu">
-                  <li><a class="active" href="vsss.html">Very Small Size</a></li>
+                  <li><a href="vsss.html">Very Small Size</a></li>
                   <!--
                   <li><a href="courses.html">Courses</a></li>
                   <li><a href="course-single.html">Course Single</a></li>
@@ -99,6 +99,7 @@
               <li><a href="publications.html">Publications</a></li>
               <li><a href="team.html">Team</a></li>
               <li><a href="contact.html">Contact</a></li>
+              <li><a href="workshop.html">Workshop</a></li>
             </ul>
           </div>
         </div>
