Update in page Workshop

--- a/contact.html
+++ b/contact.html
@@ -155,7 +155,7 @@
       </section>
 
 
-   <footer class="probootstrap-footer probootstrap-bg">
+      <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -179,6 +179,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="workshop.html">Workshop</a></li>
                 </ul>
               </div>
             </div>
