--- a/vsss.html
+++ b/vsss.html
@@ -140,7 +140,7 @@
           <!-- END row -->
         </div>
 
-  <footer class="probootstrap-footer probootstrap-bg">
+      <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -164,6 +164,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="workshop.html">Workshop</a></li>
                 </ul>
               </div>
             </div>
@@ -207,3 +208,4 @@
 
   </body>
 </html>
+
