--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="workshop.html">Workshop</a></li>
                 </ul>
               </div>
             </div>
