--- a/publications.html
+++ b/publications.html
@@ -134,7 +134,7 @@
 
 
 
- <footer class="probootstrap-footer probootstrap-bg">
+      <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -158,6 +158,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="workshop.html">Workshop</a></li>
                 </ul>
               </div>
             </div>
