--- a/team.html
+++ b/team.html
@@ -515,7 +515,7 @@
       </section>
 
 
- <footer class="probootstrap-footer probootstrap-bg">
+      <footer class="probootstrap-footer probootstrap-bg">
         <div class="container">
           <div class="row">
             <div class="col-md-4">
@@ -539,6 +539,7 @@
                   <li><a href="events.html">Publications</a></li>
                   <li><a href="team.html">Team</a></li>
                   <li><a href="contact.html">Contact</a></li>
+                  <li><a href="workshop.html">Workshop</a></li>
                 </ul>
               </div>
             </div>
@@ -582,3 +583,4 @@
 
   </body>
 </html>
+
