--- a/workshop.html
+++ b/workshop.html
@@ -160,8 +160,10 @@
                 <div class="text">
                   <h3>Material of Workshop : Artificial Intelligence</h3>
                   <p></p>
-                  <p> 1. <a href="archives/tdpVss2017.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2017 </p>
-                  <p> 2. <a href="archives/tdpVss2016.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2016 </p>
+                  <p> 1. <a href="archives/wkstg6353447492383.pdf" target="blank">Slide</a> of Presentation </p>
+                  <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >V-REP </a> Download</p>
+                  <p> 3. <a href="https://github.com/robocin/vrep-example" target="blank" >V-REP </a> Example</p>
+                  <p> 4. <a href="http://home.ifi.uio.no/paalh/dataset/alfheim/" target="blank" >Dataset </a>Soccer Video and Player Position</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -180,8 +182,11 @@
                 <div class="text">
                   <h3>Material of Workshop : Robot</h3>
                   <p></p>
-                  <p> 1. <a href="archives/tdpVss2017.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2017 </p>
-                  <p> 2. <a href="archives/tdpVss2016.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2016 </p>
+                  <p> 1. <a href="archives/wkrobo1256292038.pdf" target="blank">Slide</a> of Presentation </p>
+                  <p> 2. <a href="https://www.youtube.com/watch?v=6WIE1Vn1IPQ&list=PLA3877F8BF4576577" target="blank" >Tutorial Eagle </a> Video</p>
+                  <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
+                  <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
+                  <p> 5. <a href="https://www.youtube.com/watch?v=AtE7KvKrjXw" target="blank">Tutorial Fusion </a>Video </p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -200,8 +205,8 @@
                 <div class="text">
                   <h3>Material of Workshop : Computer Vision</h3>
                   <p></p>
-                  <p> 1. <a href="archives/tdpVss2017.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2017 </p>
-                  <p> 2. <a href="archives/tdpVss2016.pdf">RobôCIn Very Small Size Soccer</a> for LARC 2016 </p>
+                  <p> 1. <a href="archives/wkvis73836380298372.pdf" target="blank">Slide</a> of Presentation </p>
+                  <p> 2. <a href="archives/MaterialPratico.zip" target="blank">Practice</a> Material </p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
