Update workshop links

--- a/workshop.html
+++ b/workshop.html
@@ -164,6 +164,7 @@
                   <p> 2. <a href="http://www.coppeliarobotics.com/downloads.html" target="blank" >V-REP </a> Download</p>
                   <p> 3. <a href="https://github.com/robocin/vrep-example" target="blank" >V-REP </a> Example</p>
                   <p> 4. <a href="http://home.ifi.uio.no/paalh/dataset/alfheim/" target="blank" >Dataset </a>Soccer Video and Player Position</p>
+                  <p> 5. <a href="https://github.com/rcsoccersim/" target="blank" >Simulator 2D </a>Download</p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
@@ -187,6 +188,8 @@
                   <p> 3. <a href="https://learn.sparkfun.com/tutorials/using-eagle-schematic?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Schematic </p>
                   <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
                   <p> 5. <a href="https://www.youtube.com/watch?v=AtE7KvKrjXw" target="blank">Tutorial Fusion </a>Video </p>
+                  <p> 6. <a href="http://wiki.robocup.org/Small_Size_League/RoboCup_2016/Teams" target="blank"> TDP </a> SSL </p>
+                  <p> 6. <a href="http://www.cbrobotica.org/mostravirtual/?lang=pt" target="blank"> TDPS </a> Search </p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
