Update name of material

--- a/workshop.html
+++ b/workshop.html
@@ -189,7 +189,7 @@
                   <p> 4. <a href="https://learn.sparkfun.com/tutorials/using-eagle-board-layout?_ga=2.58280618.1881147222.1515548543-944466995.1515548543" target="blank">Tutorial Eagle </a>Using EAGLE: Board Layout </p>
                   <p> 5. <a href="https://www.youtube.com/watch?v=AtE7KvKrjXw" target="blank">Tutorial Fusion </a>Video </p>
                   <p> 6. <a href="http://wiki.robocup.org/Small_Size_League/RoboCup_2016/Teams" target="blank"> TDP </a> SSL </p>
-                  <p> 6. <a href="http://www.cbrobotica.org/mostravirtual/?lang=pt" target="blank"> TDPS </a> Search </p>
+                  <p> 6. <a href="http://www.cbrobotica.org/mostravirtual/?lang=pt" target="blank"> TDPs </a> Search </p>
                   <p><a href="#" class="js-backtotop"><i class="icon-arrow-long-up"></i>Back to top </a></p>
                 </div>
                 </div>
