--- a/team.html
+++ b/team.html
@@ -138,6 +138,24 @@
               </div>
             </div>
 
+          </div>
+            <div class="row">
+            <div class="clearfix visible-sm-block visible-xs-block"></div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/raphael.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Raphael Brito</h3>
+                  <p>MSc Student in Computer Science</p>
+
+
+                </div>
+              </div>
+            </div>
+
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -148,43 +166,31 @@
                   <p>MSc Student in Computer Science</p>
                   <p> </p>
                   <p> </p>
-                  <p>Robot Team | VSS</p>
+
 
                 </div>
               </div>
             </div>
-          </div>
-            <div class="row">
-            <div class="clearfix visible-sm-block visible-xs-block"></div>
+
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/raphael.jpg" alt="" class="img-responsive">
+                  <img src="img/rapela.jpg" alt="" class="img-responsive">
                 </figure>
                 <div class="text">
-                  <h3>Raphael Brito</h3>
+                  <h3>Heitor Rapela</h3>
                   <p>MSc Student in Computer Science</p>
-                  <p>Robot Team | VSS</p>
+
 
                 </div>
               </div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/bandeira.jpg" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Gabriel Bandeira</h3>
-                  <p>Undergraduate Computer Engineering</p>
-                  <p>Team Manager | VSS <p>
-
-                </div>
-              </div>
-            </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
 
+          </div>
+
+          <div class="row">
               <div class="col-md-4 col-sm-6">
                 <div class="probootstrap-teacher text-center probootstrap-animate">
                   <figure class="media">
@@ -193,13 +199,10 @@
                   <div class="text">
                     <h3>Lucas Cavalcanti</h3>
                     <p>Undergraduate Computer Engineering</p>
-                    <p>Robot Manager | VSS <p>
                   </div>
                 </div>
               </div>
-          </div>
 
-          <div class="row">
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -208,7 +211,7 @@
                 <div class="text">
                   <h3>João Lucas</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Robot Team | VSS</p>
+
 
                 </div>
               </div>
@@ -222,28 +225,28 @@
                 <div class="text">
                   <h3>David Riff</h3>
                   <p>Undergraduate Electronic Engineering</p>
-                  <p>Robot Team | VSS</p>
+
 
                 </div>
               </div>
             </div>
 
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/juliana.JPG" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Juliana Damurie</h3>
-                  <p>Undergraduate Computer Engineering</p>
-                  <p>Robot Team | VSS</p>
-
-                </div>
-              </div>
-            </div>
           </div>
 
           <div class="row">
+              <div class="col-md-4 col-sm-6">
+                <div class="probootstrap-teacher text-center probootstrap-animate">
+                  <figure class="media">
+                    <img src="img/juliana.JPG" alt="" class="img-responsive">
+                  </figure>
+                  <div class="text">
+                    <h3>Juliana Damurie</h3>
+                    <p>Undergraduate Computer Engineering</p>
+
+
+                  </div>
+                </div>
+              </div>
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -252,7 +255,7 @@
                 <div class="text">
                   <h3>Vinicius Bezerra</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Robot Team | VSS <p>
+
 
                 </div>
               </div>
@@ -265,28 +268,30 @@
                 <div class="text">
                   <h3>Roberto Fernandes</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Strategy Manager | VSS <p>
+
 
                 </div>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/renato.jpg" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Renato Sousa</h3>
-                  <p>Undergraduate Computer Engineering</p>
-                  <p>Strategy Team | VSS <p>
 
-                </div>
-              </div>
-            </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
           </div>
 
           <div class="row">
+              <div class="col-md-4 col-sm-6">
+                <div class="probootstrap-teacher text-center probootstrap-animate">
+                  <figure class="media">
+                    <img src="img/renato.jpg" alt="" class="img-responsive">
+                  </figure>
+                  <div class="text">
+                    <h3>Renato Sousa</h3>
+                    <p>Undergraduate Computer Engineering</p>
+
+
+                  </div>
+                </div>
+              </div>
+
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -295,24 +300,12 @@
                 <div class="text">
                   <h3>Cristiano Oliveira</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Strategy Team | VSS <p>
+
 
                 </div>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/andreluis.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>André Luís</h3>
-                  <p>Undergraduate Computer Engineering</p>
-                  <p>Strategy Team | VSS <p>
 
-                </div>
-              </div>
-            </div>
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -321,7 +314,6 @@
                 <div class="text">
                   <h3>Esdras Júnior</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Strategy Team | VSS <p>
 
                 </div>
               </div>
@@ -330,19 +322,7 @@
 
           </div>
           <div class="row">
-            <div class="col-md-4 col-sm-6">
-              <div class="probootstrap-teacher text-center probootstrap-animate">
-                <figure class="media">
-                  <img src="img/rapela.jpg" alt="" class="img-responsive">
-                </figure>
-                <div class="text">
-                  <h3>Heitor Rapela</h3>
-                  <p>MSc Student in Computer Science</p>
-                  <p>Vision Manager | VSS <p>
 
-                </div>
-              </div>
-            </div>
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -351,7 +331,7 @@
                 <div class="text">
                   <h3>Carlos Pena</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Vision Team | VSS <p>
+
 
                 </div>
               </div>
@@ -365,8 +345,20 @@
                 <div class="text">
                   <h3>Júnior Lima</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Vision Team | VSS <p>
 
+
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/marvson.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Marvson Allan</h3>
+                  <p>Undergraduate Computer Engineering</p>
                 </div>
               </div>
             </div>
@@ -381,7 +373,7 @@
                 <div class="text">
                   <h3>Mateus Gonçalves</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Vision Team | VSS <p>
+
 
                 </div>
               </div>
@@ -394,13 +386,53 @@
                 <div class="text">
                   <h3>Lucas Maggi</h3>
                   <p>Undergraduate Computer Engineering</p>
-                  <p>Vision Team | VSS <p>
+
 
                 </div>
               </div>
             </div>
             <div class="clearfix visible-sm-block visible-xs-block"></div>
           </div>
+           <h1 >Last Seasons</h1>
+           <div class="row">
+               <div class="col-md-4 col-sm-6">
+                 <div class="probootstrap-teacher text-center probootstrap-animate">
+                   <figure class="media">
+                     <img src="img/bandeira.jpg" alt="" class="img-responsive">
+                   </figure>
+                   <div class="text">
+                     <h3>Gabriel Bandeira</h3>
+                     <p>Undergraduate Computer Engineering</p>
+
+                   </div>
+                 </div>
+               </div>
+               <div class="col-md-4 col-sm-6">
+                 <div class="probootstrap-teacher text-center probootstrap-animate">
+                   <figure class="media">
+                     <img src="img/andreluis.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                   </figure>
+                   <div class="text">
+                     <h3>André Luís</h3>
+                     <p>Undergraduate Computer Engineering</p>
+
+                   </div>
+                 </div>
+               </div>
+               <div class="col-md-4 col-sm-6">
+                 <div class="probootstrap-teacher text-center probootstrap-animate">
+                   <figure class="media">
+                     <img src="img/Iraline.jpg" alt="Free Bootstrap Template by ProBootstrap.com" class="img-responsive">
+                   </figure>
+                   <div class="text">
+                     <h3> Iraline Nunes</h3>
+                     <p>Undergraduate Computer Engineering</p>
+
+                   </div>
+                 </div>
+               </div>
+             <div class="clearfix visible-sm-block visible-xs-block"></div>
+           </div>
         </div>
       </section>
 
