reorganizing the centralization of the images of the advisors

--- a/team.html
+++ b/team.html
@@ -112,11 +112,11 @@
 
         <div class="container">
 
-          <div class="row probootstrap-flex-block">
-            <div class="col-md-4 col-sm-6 ">
+          <div class="row probootstrap-flex-block" >
+            <div class="col-md-6 col-sm-6 " >
               <div class="probootstrap-teacher text-center probootstrap-animate ">
                 <figure class="media">
-                  <img src="img/edna.jpg" alt="" class="img-responsive">
+                  <a href="http://cin.ufpe.br/~ensb/" target="blank"><img src="img/edna.jpg" alt="" class="img-responsive"></a>
                 </figure>
                 <div class="text">
                   <h3>Edna Barros</h3>
@@ -125,10 +125,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-6 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
-                  <img src="img/hans.png" alt="" class="img-responsive">
+                  <a href="http://cin.ufpe.br/~hfb/"><img src="img/hans.png" alt="" class="img-responsive"></a> 
                 </figure>
                 <div class="text">
                   <h3>Hansenclever Bassani</h3>
