added new members

--- a/team.html
+++ b/team.html
@@ -378,6 +378,7 @@
                 </div>
               </div>
             </div>
+
             <div class="col-md-4 col-sm-6">
               <div class="probootstrap-teacher text-center probootstrap-animate">
                 <figure class="media">
@@ -386,13 +387,106 @@
                 <div class="text">
                   <h3>Lucas Maggi</h3>
                   <p>Undergraduate Computer Engineering</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/felipemartins.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Felipe Martins</h3>
+                  <p>Undergraduate Mechanical Engineering</p>
+                </div>
+              </div>
+            </div>
+            
+
+            <div class="clearfix visible-sm-block visible-xs-block"></div>
+          </div>
+             <div class="row">
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/mariana.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Mariana Barros</h3>
+                  <p>Undergraduate Computer Engineering</p>
 
 
                 </div>
               </div>
             </div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/josedouglas.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>José Douglas</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/cecilia.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Cecília Virgínia</h3>
+                  <p>Undergraduate Mechanical Engineering</p>
+                </div>
+              </div>
+            </div>  
+
             <div class="clearfix visible-sm-block visible-xs-block"></div>
           </div>
+
+             <div class="row">
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/joaoamaro.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>João Amaro</h3>
+                  <p>Undergraduate Computer Engineering</p>
+
+
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/walber.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Walber Macedo</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4 col-sm-6">
+              <div class="probootstrap-teacher text-center probootstrap-animate">
+                <figure class="media">
+                  <img src="img/lucassantana.jpg" alt="" class="img-responsive">
+                </figure>
+                <div class="text">
+                  <h3>Lucas Santana</h3>
+                  <p>Undergraduate Computer Engineering</p>
+                </div>
+              </div>
+            </div>
+
            <h1 >Last Seasons</h1>
            <div class="row">
                <div class="col-md-4 col-sm-6">
@@ -433,6 +527,23 @@
                </div>
              <div class="clearfix visible-sm-block visible-xs-block"></div>
            </div>
+
+           <div class="row">
+               <div class="col-md-4 col-sm-6">
+                 <div class="probootstrap-teacher text-center probootstrap-animate">
+                   <figure class="media">
+                     <img src="img/caio.jpg" alt="" class="img-responsive">
+                   </figure>
+                   <div class="text">
+                     <h3>Caio Carvalho</h3>
+                     <p>Undergraduate Computer Engineering</p>
+
+                   </div>
+                 </div>
+               </div>
+             <div class="clearfix visible-sm-block visible-xs-block"></div>
+           </div>
+
         </div>
       </section>
 
